--- a/components/Main.css
+++ b/components/Main.css
@@ -1,4 +1,6 @@
 .main-section{
     text-align: center;
-    background-color: green;
+    background-color: grey;
+    width:100%;
+    height:20vh;
 }
