--- a/components/TableForCells.css
+++ b/components/TableForCells.css
@@ -1,10 +1,39 @@
 .table-for-cells{
     padding:1rem;
     border:1px solid black;
-    width:80%;
-    /* margin:0 auto; */
+    width:85%;
+    display:flex;
+    flex-wrap: wrap;
+
 }
-.table-for-cells{
+
+.square-footage{
+    position: absolute;
+    margin-left:33.2%;
+    margin-top:-4.3%;
+}
+
+.unit-price-th{
+    position: absolute;
+    margin-left:41.8%;
+    margin-top:-4.3%;
+}
+
+.table-for-cells th{
+    padding:1.3rem;
+    background-color: grey;
+}
+
+
+.tr-for-cell-rows{
     padding:1rem;
-    margin:.5rem;
+    margin:1rem;
+    border:1px solid black;
+    background-color: grey;
+    display: flex;
+}
+
+.tr-for-cell-rows td{
+    border:1px solid black;
+    width:100px;
 }
