--- a/components/TableForCells.css
+++ b/components/TableForCells.css
@@ -31,9 +31,26 @@
     border:1px solid black;
     background-color: grey;
     display: flex;
+    width:80%;
+    height:25px;
 }
 
 .tr-for-cell-rows td{
     border:1px solid black;
     width:100px;
+    height:25px;
+}
+
+.tr-for-cell-rows p{
+/* padding:2rem; */
+margin-left:2rem;
+}
+
+.tr-for-cell-rows input{
+height:25px;
+width:10%;
+}
+
+.purple{
+    background-color: purple;
 }
