--- a/components/Form.css
+++ b/components/Form.css
@@ -1,25 +1,30 @@
-.div-form{
-    margin:0 auto;
-    /* width:50%; */
+.div-form {
+    margin-top: 20px;
 }
 
-form{
-    margin: 0 auto;
-}
-form label{
-    margin:1rem;
-}
-.submit-form{
- margin-left:2%;
- padding:2px;
- border: 1px solid black;
- background-color: black;
- color:white;
+form {
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.submit-form:hover{
-    transform: scale(0.8);
-    transform: 1s;
-    /* background-color: black; */
-    border:white 1px solid;
+label {
+    margin-right: 10px;
+}
+
+
+
+.orange {
+    background-color: orange;
+}
+
+.red {
+    background-color: red;
+}
+
+.hide {
+    display: none;
+}
+
+.selected {
+    color: gold;
 }
