--- a/components/TableForCells.css
+++ b/components/TableForCells.css
@@ -1,56 +1,56 @@
-.table-for-cells{
-    padding:1rem;
-    border:1px solid black;
-    width:85%;
-    display:flex;
-    flex-wrap: wrap;
-
-}
-
-.square-footage{
-    position: absolute;
-    margin-left:33.2%;
-    margin-top:-4.3%;
-}
-
-.unit-price-th{
-    position: absolute;
-    margin-left:41.8%;
-    margin-top:-4.3%;
-}
-
 .table-for-cells th{
-    padding:1.3rem;
-    background-color: grey;
+    padding: 10px;
+    border: 1px solid black;
+    width: 30%; /* Adjust this value to match your desired width */
+    text-align: center;
 }
 
 
-.tr-for-cell-rows{
-    padding:1rem;
-    margin:1rem;
-    border:1px solid black;
-    background-color: grey;
+.tr-for-cell-rows {
     display: flex;
-    width:80%;
-    height:25px;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0.5rem;
+    /* width: 100%; */
 }
 
-.tr-for-cell-rows td{
-    border:1px solid black;
-    width:100px;
-    height:25px;
+.table-for-cells {
+    width: 80%;
+    border-collapse: collapse;
+    table-layout: fixed;
 }
 
-.tr-for-cell-rows p{
-/* padding:2rem; */
-margin-left:2rem;
+.tr-for-cell-rows {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0.5rem;
+    width:87vw;
 }
 
-.tr-for-cell-rows input{
-height:25px;
-width:10%;
+.tr-for-cell-rows td {
+    padding: 10px;
+    /* border: 1px solid black; */
+    width: 100px;
+    text-align: center;
 }
 
-.orange{
+.tr-for-cell-rows td input{
+    margin-left:10%;
+}
+
+.orange {
     background-color: orange;
+}
+
+.red {
+    background-color: red;
+}
+
+.hide {
+    display: none;
+}
+
+.selected {
+    color: gold;
 }
