--- a/components/Main.css
+++ b/components/Main.css
@@ -1,8 +1,9 @@
-.main-section{
-    text-align: center;
-    background-color: grey;
-    width:100%;
-    height:20vh;
+main{
     display:flex;
+    width:100vw;    
 }
 
+h1 {
+    text-align: center;
+    color: #ffffff; /* White text color */
+}
