--- a/components/AdditionalHardware.css
+++ b/components/AdditionalHardware.css
@@ -1,8 +1,30 @@
 .arrow-additional-hardware{
-   margin-left:77%;
+   margin-left:80%;
    margin-top: 12%;
    width:50px;
    height:50px;
     position: absolute;
 }
+.p-additional-work{
+    margin-left:80%;
+    margin-top:10%;
+    position:absolute;
+text-decoration: underline;
+}
+/* 
+.div-for-extra-hardware{
 
+}
+ */
+
+ .div-additional-hardware{
+    background-color: grey; 
+    margin-top:-1.1%;
+    width:100vw;
+    display: flex;
+    text-align: center;
+ }
+
+ .div-for-extra-hardware{
+    width:100vw;
+ }
