cleaned up the UI so each section leaves when it is time for the next section to be display

--- a/orderingTool/client/styles.css
+++ b/orderingTool/client/styles.css
@@ -92,3 +92,8 @@ button:hover {
 .div-choice-cabinet div:hover, .div-choice-color div:hover, .div-choice-pull div:hover {
     transform: scale(1.05);
 }
+
+
+.hide{
+    display: none;
+}
