worked on colors and pull choice UI

--- a/cabinetEstimationTool/styles.css
+++ b/cabinetEstimationTool/styles.css
@@ -3,5 +3,7 @@ header{
 }
 body{
     color:white;
+    background-image: url('images/backgroundCabEst.jpg');
+    background-position: center;
 }
 
