--- a/cabinetEstimationTool/components/Form.css
+++ b/cabinetEstimationTool/components/Form.css
@@ -6,11 +6,15 @@ form {
    display: flex;
    flex-wrap: wrap;
    width:100%;
+   margin:.5rem;
    justify-content: space-between;
 }
 
 label {
-    margin-right: 10px;
+    /* margin-right: 10px; */
+}
+input{
+    width:150px;
 }
 
 .orange {
