--- a/orderingTool/client/styles.css
+++ b/orderingTool/client/styles.css
@@ -26,10 +26,11 @@ h1 {
 
 /* Styling Forms */
 form {
-    background-color: white;
-    padding: 20px;
+    /* background-color: white; */
+    padding: 15px;
     border-radius: 5px;
-    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    box-shadow: 2px 2px 2px 1px black;
+    border:1px solid black;
 }
 
 input[type="text"], input[type="password"] {
